# nsmbw-inspector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  binding.gyp  dolphinreader.js  index.html  instanceView.js  package-lock.json  package.json  script.js  structures.txt  style.css
DolphinReader/: DolphinReader.cpp
data/: CMakeLists.txt  structures.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  basictypes.cpp  basictypes.h  displayers.cpp  displayers.h  helper.h  main.cpp  shiftjis.h  structure_file.cpp  structure_file.h
src/DolphinReader/: DolphinReader.cpp  DolphinReader.h
src/nsmbw/: types.h
src/nsmbw/mj2d/f/: f_manager.h
